Playin with some simple html tags.

--- a/Html and Css - basic exercises/index.html
+++ b/Html and Css - basic exercises/index.html
@@ -4,6 +4,17 @@
 	<meta charset="UTF-8">
 	<title>Homework</title>
 </head>
+<body>
+	<h1>This file contains links to all exercises of from the homework.</h1>
 	
+	<ul>
+		<li><a href="homework/HelloHtml.html">Hello html</a></li>
+		<li><a href="homework/Headings.html">Headings</a></li>
+		<li><a href="homework/Paragraphs.html">Paragraphs</a></li>
+		<li><a href="homework/TO DO list.html">To do list</a></li>
+		<li><a href="homework/Hello.html">From Pleven</a></li>
+		<li><a href="homework/Hello.html">From Pleven</a></li>
+		<li><a href="homework/Fruits.html">From Pleven</a></li>
+	</ul>
+</body>
 </html>
-</!DOCTYPE>
