--- a/Html and Css - basic exercises/homework/Fruits.html
+++ b/Html and Css - basic exercises/homework/Fruits.html
@@ -2,9 +2,33 @@
 <html>
 <head>
 	<meta charset="UTF-8">
-	<title>Homework</title>
+	<title>Images</title>
 </head>
 <body>
-
+	<h1>Fruits</h1>
+	<div class="first_row">
+		<img src="Images/apple.png" alt="apple" />
+		<img src="Images/banana.png" alt="banana" />
+		<img src="Images/kiwi.png" alt="kiwi" />
+		<img src="Images/orange.png" alt="orange" />
+	</div>
+	<div class="second_row">
+		<img src="Images/kiwi.png" alt="kiwi" />
+		<img src="Images/orange.png" alt="orange" />
+		<img src="Images/apple.png" alt="apple" />
+		<img src="Images/banana.png" alt="banana" />
+	</div>
+	<div class="third_row">
+		<img src="Images/banana.png" alt="banana" />
+		<img src="Images/kiwi.png" alt="kiwi" />
+		<img src="Images/apple.png" alt="apple" />
+		<img src="Images/orange.png" alt="orange" />
+	</div>
+	<div class="fourth_row">
+		<img src="Images/orange.png" alt="orange" />
+		<img src="Images/apple.png" alt="apple" />
+		<img src="Images/banana.png" alt="banana" />
+		<img src="Images/kiwi.png" alt="kiwi" />
+	</div>
 </body>
 </html>
