Implementing the index.html

--- a/Blog System Design/index.html
+++ b/Blog System Design/index.html
@@ -3,7 +3,20 @@
 <head>
     <title>Softuni Blog</title>    
     <meta charset="UTF-8">
+    <link rel="stylesheet" href="styles/style.css" />
+    <script src="scripts/jquery-1.10.2.js"></script>
+    <script src="scripts/bootstrap.js"></script>
 </head>
 <body>
+    <div class="container">
+        <div class="row">
+            <div class="col-md-6">
+                First Text
+            </div>
+            <div class="col-md-6">
+                Second Text
+            </div>
+        </div>
+    </div>
 </body>
 </html>
