Implemented navigation bar and some article.

--- a/Blog System Design/index.html
+++ b/Blog System Design/index.html
@@ -8,15 +8,63 @@
     <script src="scripts/bootstrap.js"></script>
 </head>
 <body>
-    <div class="container">
-        <div class="row">
-            <div class="col-md-6">
-                First Text
-            </div>
-            <div class="col-md-6">
-                Second Text
+    <header>
+        <div class="navbar navbar-default navbar-fixed-top text-uppercase">
+            <div class="container">
+
+                <a href="index.html" class="navbar-brand">Softuni Blog</a>
+
+                <div class="navbar-header">
+                    <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                    </button>
+                </div>
+
+                <div class="navbar-collapse collapse">
+                    <ul class="nav navbar-nav navbar-right">
+                        <li><a href="#">Register</a></li>
+                        <li><a href="#">Login</a></li>
+                    </ul>
+                </div>
             </div>
         </div>
-    </div>
+    </header>
+
+    <main>
+        <div class="container">
+            <div class="row">
+                <div class="col-md-6">
+                    <article>
+                        <header>
+                            Something Happened !
+                        </header>
+                        <p>
+                            Some Text Some Text Some Text Some Text 
+                            Some Text Some Text Some Text Some Text 
+                            Some Text Some Text Some Text Some Text 
+                            Some Text Some Text Some Text Some Text 
+                            Some Text Some Text Some Text Some Text 
+                            Some Text Some Text Some Text Some Text 
+                            Some Text Some Text Some Text Some Text 
+                            Some Text Some Text Some Text Some Text 
+                            Some Text Some Text Some Text Some Text 
+                        </p>
+                        <small>Author</small>
+                        <footer>
+                            <div class="pull-right">
+                                <a class="btn btn-default btn-xs" href="#">Read more</a>
+                            </div>
+                        </footer>
+                    </article>
+                </div>
+            </div>
+        </div>
+    </main>
+
+    <footer>
+
+    </footer>
 </body>
 </html>
