playing with html and css. Simple contact form styling and some nested divs.

--- a/Html and Css - basic exercises/index.html
+++ b/Html and Css - basic exercises/index.html
@@ -8,13 +8,18 @@
 	<h1>This file contains links to all exercises of from the homework.</h1>
 	
 	<ul>
-		<li><a href="homework/HelloHtml.html">Hello html</a></li>
-		<li><a href="homework/Headings.html">Headings</a></li>
-		<li><a href="homework/Paragraphs.html">Paragraphs</a></li>
-		<li><a href="homework/TO DO list.html">To do list</a></li>
-		<li><a href="homework/Hello.html">From Pleven</a></li>
-		<li><a href="homework/Hello.html">From Pleven</a></li>
-		<li><a href="homework/Fruits.html">From Pleven</a></li>
+		<li><a href="homework/HelloHtml.html">Hello html</a></li><br/>
+		<li><a href="homework/Headings.html">Headings</a></li><br/>
+		<li><a href="homework/Paragraphs.html">Paragraphs</a></li><br/>
+		<li><a href="homework/TO DO list.html">To do list</a></li><br/>
+		<li><a href="homework/Hello.html">From Pleven</a></li><br/>
+		<li><a href="homework/Fruits.html">Fruits</a></li><br/>
+		<li><a href="homework/SimpleForm.html">Forms</a></li><br/>
+		<li><a href="homework/Colours.html">Colours</a></li><br/>
+		<li><a href="homework/Borders.html">Borders</a></li><br/>
+		<li><a href="homework/NestedDivs.html">Nested div elements</a></li><br/>
+		<li><a href="homework/Langs.html">Languages</a></li><br/>
+		<li><a href="homework/Contact.html">Contact us form</a></li><br/>
 	</ul>
 </body>
 </html>
