Finish styling the front page ( article design) and footer of the page.

--- a/Blog System Design/index.html
+++ b/Blog System Design/index.html
@@ -41,17 +41,51 @@
                             Something Happened !
                         </header>
                         <p>
-                            Some Text Some Text Some Text Some Text 
-                            Some Text Some Text Some Text Some Text 
-                            Some Text Some Text Some Text Some Text 
-                            Some Text Some Text Some Text Some Text 
-                            Some Text Some Text Some Text Some Text 
-                            Some Text Some Text Some Text Some Text 
-                            Some Text Some Text Some Text Some Text 
-                            Some Text Some Text Some Text Some Text 
-                            Some Text Some Text Some Text Some Text 
+                            Problems for exercises and homework for the “Software Technologies” course @ SoftUni.
+							After following the steps for this exercise, you should have built the base for our blog. 
+							Note that this exercise uses bootstrap extensively, so every HTML code you write will be instantly stylized and will look good off the shelf. This is not the case when you write plain HTML without ready styles.
+							However, pay attention to the <tags> that we are using. Almost all <tags> that we are going to write use a class="" attribute (that is <tag class="some class">). The class="" attribute points to the corresponding selector in the style.css file. This is exactly the same as when you are writing your own styles but in our case, they are provided by the open source framework called bootstrap.
+							With this in mind, let's get to work.
+
                         </p>
-                        <small>Author</small>
+                        <small class="author">Author</small>
+                        <footer>
+                            <div class="pull-right">
+                                <a class="btn btn-default btn-xs" href="#">Read more</a>
+                            </div>
+                        </footer>
+                    </article>
+                </div>
+				<div class="col-md-6">
+                    <article>
+                        <header>
+                            Something Happened !
+                        </header>
+                        <p>
+							Players can now right-click on any chat type (Whisper, Trade,
+						   General, Party, Raid, etc.) and choose to move conversation types
+						   into separate windows. This will move that chat type to a separate
+						   tab in the Chat frame which can be undocked and moved anywhere on
+						   the screen. 
+						   Using the Move to Whisper Window option on a Whisper will place the
+						   conversation with that player in a separate tab.
+						   Any time a conversation with another player is put into its own tab,
+						   the tab will glow when a new message is received.
+						   Hovering over the Chat Frame and using the mouse wheel will allow
+						   players to scroll through chat text.
+						   Players can select Classic Mode under Interface Options to keep the
+						   Chat Frame functionality closer to what it was prior to patch 3.3.5.
+						   The Simple Chat User Interface option has been removed.
+						-  Friends List
+						   A new icon has been added to the top left of the Chat Frame which
+						   will open up the Friends list. 
+						   In addition to its current functionality, the Friends List will now
+						   allow players to add Battle.net accounts (Real ID). Players will
+						   have to confirm that they are friends in order for a Real ID to be
+						   added. Once Real ID friends, players can communicate cross-game,
+						   cross-faction and cross-realm.
+                        </p>
+                        <small class="author">Author</small>
                         <footer>
                             <div class="pull-right">
                                 <a class="btn btn-default btn-xs" href="#">Read more</a>
@@ -64,7 +98,9 @@
     </main>
 
     <footer>
-
+		<div class="container modal-footer">
+			<p>&copy; 2017 - Software university foundation! </p>
+		</div>
     </footer>
 </body>
 </html>
