--- a/Blog System Design/index.html
+++ b/Blog System Design/index.html
@@ -24,8 +24,8 @@
 
                 <div class="navbar-collapse collapse">
                     <ul class="nav navbar-nav navbar-right">
-                        <li><a href="#">Register</a></li>
-                        <li><a href="#">Login</a></li>
+                        <li><a href="register.html">Register</a></li>
+                        <li><a href="login.html">Login</a></li>
                     </ul>
                 </div>
             </div>
@@ -51,7 +51,7 @@
                         <small class="author">Author</small>
                         <footer>
                             <div class="pull-right">
-                                <a class="btn btn-default btn-xs" href="#">Read more</a>
+                                <a class="btn btn-default btn-xs" href="viewpost.html">Read more</a>
                             </div>
                         </footer>
                     </article>
@@ -88,7 +88,7 @@
                         <small class="author">Author</small>
                         <footer>
                             <div class="pull-right">
-                                <a class="btn btn-default btn-xs" href="#">Read more</a>
+                                <a class="btn btn-default btn-xs" href="viewpost.html">Read more</a>
                             </div>
                         </footer>
                     </article>
